--- a/carbon-gw/components/org.wso2.carbon.gateway/pom.xml
+++ b/carbon-gw/components/org.wso2.carbon.gateway/pom.xml
@@ -144,7 +144,7 @@
                                         <argLine>-Xmx512m</argLine>
                                         <redirectTestOutputToFile>${surefire.redirectTestOutputToFile}</redirectTestOutputToFile>
                                         <systemPropertyVariables>
-                                            <java.io.tmpdir>${project.build.directory}</java.io.tmpdir>
+                                            <java.io.tmpdir>${project.elseDefault.directory}</java.io.tmpdir>
                                         </systemPropertyVariables>
                                         <includes>
                                             <include>**/*TestSuite.java</include>
